<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VTamper</string>
    <string name="btn_echo">Echo</string>
    <string name="btn_load">Load</string>
    <string name="btn_play">Play</string>
    <string name="btn_record">Record</string>
    <string name="btn_reverse">Reverse</string>
    <string name="btn_save">Save file</string>
    <string name="btn_share">Share</string>
    <string name="end_time">End position (sec)</string>
    <string name="main_title">VTamper</string>
    <string name="repeats">Repeats</string>
    <string name="start_time">Start position (sec)</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sound_recording_example2">SoundRecordingExample2</string>
    <string name="app_info">This is a sample application to record audio.\n\nTo start recording press \&quot;Record\&quot; button, to stop recording press \&quot;Stop\&quot; button.</string>
	<string name="choose_format_title">Choose Audio Format</string>
	<string name="start_recording">Record</string>
	<string name="stop_recording">Stop</string>
	<string name="audio_format">Format</string>
</resources>
